# ats-result

./: .drone.yaml  .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  ats-result.hats  conanfile.py  package.json
cmake/: FindATS.cmake
src/: ats-result.hats
src/DATS/: result.dats
src/HATS/: includes.hats
src/SATS/: result.sats
test/: main.dats
tests/: Makefile  conanfile.py  package-lock.json  package.json  tests.dats
