CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(ATS_HOME /home/randy/ATS/ATS-Postiats-Github)
set(CMAKE_C_COMPILER "${ATS_HOME}/bin/atscc")
PROJECT (ATSRESULT C)
FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (src/SATS src/DATS src/HATS)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE")
ATS_COMPILE (TEST_SRC 
	src/SATS/result.sats
	src/DATS/result.dats
	)
ADD_LIBRARY (atsresult ${TEST_SRC})
